<resources>
    <string name="app_name">My Root App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_image">background image</string>
    <string name="getstarted_top_text">World’s #1\nClimate Action App</string>
    <string name="getstarted_top_bottom">I can literally say\nI have roots in Africa!</string>
    <string name="heading_typeTree">What type of tree</string>
    <string name="instruction_typeTree">Choose the type of tree\nfor planting your roots</string>
    <string name="decorative_trees">Decorative trees</string>
    <string name="submit_typeTree">Submit</string>
    <string name="heading_how">How to plant a tree</string>
    <string name="instruction_how">Choose how to plant\nyour roots</string>
    <string name="remote_option">Remote</string>
    <string name="in_person1">In Person</string>
    <string name="next1">Next</string>
    <string name="ocassion_type">Type of ocassion</string>
    <string name="instruction_ocassion">Choose the type of\nocassion</string>
    <string name="birthdays">Birthdays</string>
    <string name="anniversaries">Anniversary</string>
    <string name="others">Others</string>
    <string name="holidays">Holidays</string>
    <string name="back_nav">Back Navigation</string>
    <string name="fruit_type">Fruit trees</string>
    <string name="Environmental_trees">Environmental trees</string>
    <string name="tree_price">$50</string>
    <string name="full_tree">Full Tree App</string>
    <string name="christmas_tree">Christmas Tree-Type</string>
    <string name="mahogany_tree">Mahogany Tree</string>
    <string name="select_tree">Tree Selected</string>
    <string name="in_person">In Person</string>
    <string name="anniversary_icon">Anniversary Icon</string>
    <string name="holiday_icon">Holiday Icon</string>
    <string name="others_icon">Others Icon</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="signup_text">To verify your identity. Please fill in\nyour personal information.</string>
    <string name="full_name1">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country of residence</string>
    <string name="phone">Phone</string>
    <string name="have_an_account">Have an account? Sign in</string>
    <string name="submit">Submit</string>
    <string name="image">image</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="verification_text">Enter the 4 digit code sent\nto your email address</string>
    <string name="verification">Verification</string>
    <string name="verification_successful">Verification successful!</string>
    <string name="verification_successful_text">Yor account has been verified\nplease login with your data</string>
    <string name="got_it">Got it!</string>
    <string name="back_button">backButton</string>
    <string name="why_plant_a_tree">Why Plant a tree</string>
    <string name="choose_the_reason_for_planting_your_roots">Choose the reason for planting your roots</string>
    <string name="choose_the_reason_for">choose the reason for</string>
    <string name="planting_your_roots">planting your roots</string>
    <string name="climate_action">Climate action</string>
    <string name="supporting_vulnerable_regions">Supporting vulnerable regions</string>
    <string name="to_create_a_job">To create a Job</string>
    <string name="decent_work_and_economic_growth">Decent work and economic growth</string>
    <string name="gift">Gift</string>
    <string name="gift_to_self_or_loved_one">Gift to self or loved one</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="where_to_plant">Where to Plant?</string>
    <string name="choose_the_location_to">Choose the location to</string>
    <string name="plant_your_roots">plant your roots</string>
    <string name="map">map</string>
    <string name="_54_countries">54 countries</string>
    <string name="great_green_wall">Great green wall</string>
    <string name="learn_more">Learn More</string>
    <string name="shrub">shrub</string>
    <string name="the_54_countries">The 54 Countries</string>
    <string name="_0">0</string>
    <string name="in_the_54_countries_on_the_continent">in the 54 countries on the continent</string>
    <string name="greengreat">The Green Great Wall</string>
    <string name="good">Good</string>
    <string name="plant_a_tree_save_the_planet">Plant a tree, save the planet and</string>
    <string name="support_africa_by_creating_a_job">support Africa by creating a job</string>
    <string name="plant_a_tree">Plant a tree</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="email1">Email</string>
    <string name="london">London</string>
    <string name="_234809104143822">+234809104143822</string>
    <string name="notifications">Notifications</string>
    <string name="newsletter">Newsletter</string>
    <string name="why_bg">why_bg</string>
    <string name="goback">goBack</string>
    <string name="create_a_new_password">Create a new Password</string>
    <string name="instructions_to_reset_your_password_has">Instructions to reset your password has</string>
    <string name="been_sent_to_your_mail">been sent to your mail</string>
    <string name="lock">lock</string>
    <string name="enter_code">Enter code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="don_t_have_an_account_sign_up"><u>Don\'t have an Account? Sign Up</u></string>
</resources>
