<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewPasswordFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/back"
                android:contentDescription="@string/goback"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_marginStart="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/green_regular"
            android:textSize="24sp"
            android:text="@string/create_a_new_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/green_regular"
            android:text="@string/instructions_to_reset_your_password_has" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/green_regular"
            android:layout_gravity="center"
            android:text="@string/been_sent_to_your_mail" />

        <ImageView
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:src="@drawable/lock"
            android:contentDescription="@string/lock"
            android:tint="@android:color/holo_green_dark"
            android:layout_gravity="center"
            android:layout_marginTop="8dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="36dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:text="@string/enter_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_input"
            android:layout_marginEnd="@dimen/margin_horizontal_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="36dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="10dp"
            android:text="@string/new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="seePassword"
            app:passwordToggleDrawable="@drawable/eye"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="@dimen/margin_horizontal_input"
            android:layout_marginEnd="@dimen/margin_horizontal_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="36dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="10dp"
            android:text="@string/confirm_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="seePassword"
            app:passwordToggleDrawable="@drawable/eye"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="@dimen/margin_horizontal_input"
            android:layout_marginEnd="@dimen/margin_horizontal_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/signup_submit_btn"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/btn_signup_bg"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:paddingStart="100dp"
            android:paddingEnd="100dp" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_gravity="center" />


    </LinearLayout>
</layout>