<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/where_to_plant_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".WhereToPlantFragment">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/font_color_secondary"
        android:layout_height="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:layout_marginTop="27dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backbutton" />

        <ProgressBar
            android:id="@+id/progressBar2Id"
            android:layout_marginTop="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="44dp"
            android:progress="20"
            android:progressTint="@color/green_regular"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:src="@drawable/profile"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/where_to_plant"
        android:textColor="@color/green_regular"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:fontFamily="sans-serif"
        android:textColor="@color/font_color_dark"
        android:layout_gravity="center"
        android:text="@string/choose_the_location_to"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:layout_gravity="center"
        android:textColor="@color/font_color_dark"
        android:fontFamily="sans-serif"
        android:text="@string/plant_your_roots"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       android:paddingStart="48dp"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="24dp"
            android:layout_height="180dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/map"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/map"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/_54_countries"/>
                
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/countrySpinner"
                    android:layout_width="100dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/great_green_wall"
                android:layout_gravity="center|bottom"/>
            <TextView
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_more"
                android:textColor="@color/green_regular"
                android:layout_gravity="center|bottom"/>


        </LinearLayout>




    </LinearLayout>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/font_color_secondary"
        android:layout_gravity="center"
        android:background="@drawable/btn_signup_bg"/>









</LinearLayout>