<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/profile_bg"
        android:scaleType="fitXY"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:paddingStart="36dp"
        android:background="@color/font_color_secondary"
        android:layout_height="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:layout_marginTop="27dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="16dp"
        android:textColor="@color/font_color_dark"
        android:paddingStart="36dp"
        android:paddingEnd="4dp"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:paddingEnd="8dp"
        android:text="@string/full_name"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal_input"
        android:layout_marginEnd="@dimen/margin_horizontal_input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"

            android:hint="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:paddingEnd="8dp"
        android:text="@string/email"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/margin_horizontal_input"
        android:layout_marginEnd="@dimen/margin_horizontal_input"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textStyle="bold"

            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:paddingEnd="8dp"
        android:text="@string/password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/margin_horizontal_input"
        android:layout_marginEnd="@dimen/margin_horizontal_input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:paddingEnd="8dp"
        android:text="@string/country"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/margin_horizontal_input"
        android:layout_marginEnd="@dimen/margin_horizontal_input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:hint="@string/london" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/phone"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/margin_horizontal_input"
        android:layout_marginEnd="@dimen/margin_horizontal_input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textStyle="bold"
            android:hint="@string/_234809104143822" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:background="@color/font_color_hint"
        android:layout_height="1dp"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notifications"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:maxHeight="10dp"
            android:switchMinWidth="56dp"
            android:minWidth="100dp"
            android:thumbTint="@color/green_regular"
            android:thumbTextPadding="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/newsletter"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switchNewsletter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:maxHeight="10dp"
            android:switchMinWidth="56dp"
            android:minWidth="100dp"
            android:thumbTint="@color/green_regular"
            android:thumbTextPadding="25dp" />

    </RelativeLayout>






</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>